force-app/main/default/objects/Brand_Approval__c/Brand_Approval__c.object-meta.xml
<CustomObject>
    <description>shows if a brand has given approval for the use of store products in promotional marketing activities</description>
    <label>Brand Approval</label>
    <nameField>
        <displayFormat>BA-{00000000}</displayFormat>
        <label>Brand Approvals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>