force-app/main/default/objects/Brand_Approval__c/fields/Approval_given__c.field-meta.xml
<CustomField>
    <fullName>Approval_given__c</fullName>
    <description>has the brand given permission</description>
    <inlineHelpText>has the brand given permission</inlineHelpText>
    <label>Approval given</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Be Confirmed</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>