force-app/main/default/objects/Brand_Approval__c/fields/Marketing_Activity__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Activity__c</fullName>
    <description>Which Marketing activity this brand approval relates to</description>
    <inlineHelpText>Which Marketing activity this brand approval relates to</inlineHelpText>
    <label>Marketing Activity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only General Marketing Activities are allowed</errorMessage>
        <filterItems>
            <field>Marketing_Activity__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>General_Activity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Marketing_Activity__c</referenceTo>
    <relationshipLabel>Brand Approvals</relationshipLabel>
    <relationshipName>Brand_Approvals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>