force-app/main/default/objects/Brand_Approval__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Some additional notes</description>
    <inlineHelpText>Some additional notes</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>