force-app/main/default/objects/Brand_Approval__c/fields/Village_Presence__c.field-meta.xml
<CustomField>
    <fullName>Village_Presence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Brand store that needs to provide the approval for product usage</description>
    <inlineHelpText>The Brand store that needs to provide the approval for product usage</inlineHelpText>
    <label>Village Presence</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only active brands can be linked.</errorMessage>
        <filterItems>
            <field>Village_Presence__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Exited</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Village_Presence__c</referenceTo>
    <relationshipLabel>Brand Approvals</relationshipLabel>
    <relationshipName>Brand_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>